[gd_scene load_steps=3 format=3 uid="uid://bcjtoiftywxt1"]

[ext_resource type="Script" path="res://scripts/upgrades/upgrade_menu.gd" id="1_oj2vu"]
[ext_resource type="PackedScene" uid="uid://t8qx80oscpko" path="res://scenes/upgrade_controll.tscn" id="2_ujutr"]

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_oj2vu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Button1" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_ujutr")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button2")

[node name="Button2" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_ujutr")]
layout_mode = 2
focus_neighbor_top = NodePath("../Button1")
focus_neighbor_bottom = NodePath("../Button3")

[node name="Button3" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_ujutr")]
layout_mode = 2
focus_neighbor_top = NodePath("../Button2")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
